force-app/main/default/objects/ActivityTimelineChild__mdt/ActivityTimelineChild__mdt.object-meta.xml
<CustomObject>
	<label>Activity Timeline Child</label>
	<pluralLabel>Activity Timeline Children</pluralLabel>
</CustomObject>