force-app/main/default/objects/ActivityTimelineChild__mdt/fields/SObjectDateField__c.field-meta.xml
<CustomField>
	<fullName>SObjectDateField__c</fullName>
	<description
    >If the SObject that should be queried contains a relevant date field, put the SObject field name here (e.g., Date, ActivityDate, CustomDate__c)</description>
	<inlineHelpText
    >If the SObject that should be queried contains a relevant date field, put the SObject field name here (e.g., Date, ActivityDate, CustomDate__c)</inlineHelpText>
	<label>Date Field API Name</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>