force-app/main/default/objects/ActivityTimelineChild__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
	<fullName>SObjectName__c</fullName>
	<description>CustomObject__c or Object, e.g., Example__c or Account</description>
	<inlineHelpText>CustomObject__c or Object, e.g., Example__c or Account</inlineHelpText>
	<label>Child API Name</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>