force-app/main/default/objects/ActivityTimelineChild__mdt/fields/SObjectTypeValue__c.field-meta.xml
<CustomField>
	<fullName>SObjectTypeValue__c</fullName>
	<description
    >The value describing the type of an object (e.g., Email for Tasks, inkludering or rekruttering for opportunities)</description>
	<inlineHelpText
    >The value describing the type of an object (e.g., Email for Tasks, inkludering or rekruttering for opportunities)</inlineHelpText>
	<label>Type Value</label>
	<length>255</length>
	<type>Text</type>
</CustomField>