force-app/main/default/objects/ActivityTimelineChild__mdt/fields/SubtitlePastNorwegian__c.field-meta.xml
<CustomField>
	<fullName>SubtitlePastNorwegian__c</fullName>
	<defaultValue>&quot;lagde en &quot; + (&quot;SObjectTypeValue__c&quot;)</defaultValue>
	<description
    >Written as, e.g., &quot;booked an event with&quot;. The assignee or owner is prepended and any related contacts are appended to the string. Empty to remove.

- If &#39;SObject - Assignee Id&#39; is configured, the name is prepended
- If &#39;SObject - Related User Id&#39; is configured, the name is appended</description>
	<inlineHelpText>Written as, e.g., &quot;booked an event with&quot;. Empty to remove.

- If &#39;SObject - Assignee Id&#39; is configured, the name is prepended
- If &#39;SObject - Related User Id&#39; is configured, the name is appended</inlineHelpText>
	<label>Past Tense - Norwegian</label>
	<length>255</length>
	<type>Text</type>
</CustomField>