force-app/main/default/objects/ActivityTimelineChild__mdt/fields/SubtitleRelatedUserPrepositionNor__c.field-meta.xml
<CustomField>
	<fullName>SubtitleRelatedUserPrepositionNor__c</fullName>
	<description
    >If you subtitle is &quot;Karen created an event&quot;, and the related user is Carl, the connection between those two sentences would be &quot;with&quot; (Karen created an event with Carl)</description>
	<inlineHelpText
    >If you subtitle is &quot;Karen created an event&quot;, and the related user is Carl, the connection between those two sentences would be &quot;with&quot; (Karen created an event with Carl)</inlineHelpText>
	<label>Related User Preposition (No)</label>
	<length>255</length>
	<type>Text</type>
</CustomField>